[workspace]
members = ["swc_vimdoc", "dog_parser", "denops_types"]

[package]
name = "dps_dog"
authors = ["kkiyama117 <k.kiyama117@gmail.com>"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0/MIT"

[lib]
name = "dps_dog"

[dependencies]
#futures = "0.3"
#url = "2.2.1"

[profile.release]
# Tell `rustc` to optimize for speed and size
lto = true