[workspace]
members = ["swc_vimdoc", "dog_tokenizer", "denops_types"]

[package]
name = "dps_dog"
authors = ["kkiyama117 <k.kiyama117@gmail.com>"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0/MIT"

[lib]
name = "dps_dog"

[dependencies]
anyhow = "1.0.40"
thiserror = "1.0"
regex = "1.5"
#semver = { version = "0.11", features = ["serde"] }
smallvec = "1"
futures = "0.3"
url = "2.2.1"
smol_str = "0.1"
# swc
# docs: https://swc.rs
# crate: https://crates.io/search?q=swc
swc = { version = "0.23", features = [] }
swc_common = { version = "0.10", features = ["sourcemap"] }
swc_atoms = "0.2.6"
swc_ecmascript = { version = "0.39", features = ["parser", "transforms", "utils", "visit"] }
swc_ecma_ast = "0.46"
swc_ecma_visit = "0.32"
swc_ecma_utils = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
annotate-snippets = { version = "0.9.0", features = ["color"] }
clap = "2.33.3"
env_logger = "0.8.3"
globwalk = "0.8.1"
rayon = "1.5.0"

[profile.release]
# Tell `rustc` to optimize for speed and size
lto = true