[package]
name = "dog_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#glob = "0.3"
#indexmap = "1"
logos = "0.11.4"
regex = "1"
rowan = "0.10.0"
#semver = { version = "0.11", features = ["serde"] }
smallvec = "1"
deno_doc="0.5"
futures="0.3"
url = "2.2.1"
swc_common = {version="0.10",features=["tty-emitter"]}
swc_ecmascript = { version = "0.36", features = ["parser"] }

serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }