[package]
name = "dog_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
thiserror="1.0"

logos = "0.11.4"
regex = "1"
rowan = "0.10.0"
#semver = { version = "0.11", features = ["serde"] }
smallvec = "1"

deno_doc="0.5"
futures="0.3"
url = "2.2.1"
swc_atoms = "0.2.6"
swc_common = "0.10"
swc_ecmascript = { version = "0.36.0", features = ["parser", "transforms", "utils", "visit"] }

serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
annotate-snippets = { version = "0.9.0", features = ["color"] }
clap = "2.33.3"
deno_core = "0.84.0"
env_logger = "0.8.3"
globwalk = "0.8.1"
rayon = "1.5.0"